k8s/33-api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: foogra
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: api
  ports:
    - name: http
      port: 8000
      targetPort: http
