k8s/42-web-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: web
  namespace: foogra
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: web
  ports:
    - name: http
      port: 80
      targetPort: http
