k8s/50-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: foogra
  namespace: foogra
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "25m"
spec:
  ingressClassName: nginx
  rules:
    - host: foogra.local
      http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service: { name: api, port: { number: 8000 } }
          - path: /sanctum
            pathType: Prefix
            backend:
              service: { name: api, port: { number: 8000 } }
          - path: /docs
            pathType: Prefix
            backend:
              service: { name: api, port: { number: 8000 } }
          - path: /storage
            pathType: Prefix
            backend:
              service: { name: api, port: { number: 8000 } }
          - path: /
            pathType: Prefix
            backend:
              service: { name: web, port: { number: 80 } }
